fixed overflow for guests in sidebar

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -50,11 +50,20 @@ h1.redditname a { font-family: Georgia, Garamond, serif; font-weight: normal; }
   background-repeat:no-repeat;
   width:439px;
   height:142px;
-  
+}
+
+.side > .spacer:last-child .sidecontentbox {
+  width: 334px;
+}
+
+.sidecontentbox {
+
 }
 
 /* Collapse Button */
 .sidecontentbox .collapse-button {}
+
+
 
 form.toggle.flairtoggle, form.toggle.leavemoderator-button {
   background:transparent;
